compiler/melt.peg.go
package compiler

import (
	"fmt"
	"math"
	"sort"
	"strconv"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleModule
	ruleTop
	rulePackage
	ruleImport
	ruleGoImport
	ruleMeltImport
	ruleFunction
	ruleInterface
	ruleArray
	ruleDeclaration
	ruleZ
	ruleRecord
	ruleRecordContents
	ruleSex
	ruleFunArgs
	ruleGenericArgs
	ruleFunArg
	rulePreArg
	ruleLastArg
	ruleFunLabel
	ruleType
	rulePointerType
	ruleFunType
	ruleGenericType
	ruleBuiltinType
	ruleBuiltinSimple
	ruleBuiltinSlice
	ruleBuiltinArray
	ruleBuiltinMap
	ruleTypeExceptFun
	ruleCode
	ruleIndent
	ruleDedent
	ruleLine
	ruleIndexAssignment
	ruleAssignment
	ruleExpression
	ruleSimple
	ruleList
	ruleBinaryOperation
	ruleExpressionExceptBinaryOperation
	ruleBinaryOperator
	ruleUnaryOperation
	ruleUnaryOperator
	ruleExpressionExceptOperation
	ruleMethodCall
	ruleCall
	ruleBuiltinCall
	ruleBuiltinFun
	ruleBuiltinArg
	ruleFunCall
	ruleFor
	ruleForIn
	ruleForLoop
	ruleRange
	ruleRangeOperator
	ruleOn
	ruleReturn
	ruleReturnValue
	ruleReturnError
	ruleEscalator
	ruleLowerLabel
	ruleCapitalLabel
	ruleFunLowerLabel
	ruleLabel
	ruleFloat
	ruleInteger
	ruleNumber
	ruleConstant
	ruleString
	ruleTemplate
	ruleSegment
	ruleQ
	ruleText
	ruleError
	ruleSlot
	ruleWhitespace
	ruleNewline
	ruleEOT
)

var rul3s = [...]string{
	"Unknown",
	"Module",
	"Top",
	"Package",
	"Import",
	"GoImport",
	"MeltImport",
	"Function",
	"Interface",
	"Array",
	"Declaration",
	"Z",
	"Record",
	"RecordContents",
	"Sex",
	"FunArgs",
	"GenericArgs",
	"FunArg",
	"PreArg",
	"LastArg",
	"FunLabel",
	"Type",
	"PointerType",
	"FunType",
	"GenericType",
	"BuiltinType",
	"BuiltinSimple",
	"BuiltinSlice",
	"BuiltinArray",
	"BuiltinMap",
	"TypeExceptFun",
	"Code",
	"Indent",
	"Dedent",
	"Line",
	"IndexAssignment",
	"Assignment",
	"Expression",
	"Simple",
	"List",
	"BinaryOperation",
	"ExpressionExceptBinaryOperation",
	"BinaryOperator",
	"UnaryOperation",
	"UnaryOperator",
	"ExpressionExceptOperation",
	"MethodCall",
	"Call",
	"BuiltinCall",
	"BuiltinFun",
	"BuiltinArg",
	"FunCall",
	"For",
	"ForIn",
	"ForLoop",
	"Range",
	"RangeOperator",
	"On",
	"Return",
	"ReturnValue",
	"ReturnError",
	"Escalator",
	"LowerLabel",
	"CapitalLabel",
	"FunLowerLabel",
	"Label",
	"Float",
	"Integer",
	"Number",
	"Constant",
	"String",
	"Template",
	"Segment",
	"Q",
	"Text",
	"Error",
	"Slot",
	"Whitespace",
	"Newline",
	"EOT",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) Print(buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Printf(" ")
			}
			fmt.Printf("\x1B[34m%v\x1B[m %v\n", rul3s[node.pegRule], strconv.Quote(string(([]rune(buffer)[node.begin:node.end]))))
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	if tree := t.tree; int(index) >= len(tree) {
		expanded := make([]token32, 2*len(tree))
		copy(expanded, tree)
		t.tree = expanded
	}
	t.tree[index] = token32{
		pegRule: rule,
		begin:   begin,
		end:     end,
	}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type MeltParser struct {
	Buffer string
	buffer []rune
	rules  [80]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *MeltParser) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *MeltParser) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *MeltParser
	max token32
}

func (e *parseError) Error() string {
	tokens, error := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		error += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return error
}

func (p *MeltParser) PrintSyntaxTree() {
	p.tokens32.PrintSyntaxTree(p.Buffer)
}

func (p *MeltParser) Init() {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules, tree := p.rules, tokens32{tree: make([]token32, math.MaxInt16)}
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 Module <- <(Package Newline Import? Newline? (Top Newline)* EOT)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				{
					position2 := position
					{
						position3, tokenIndex3 := position, tokenIndex
						if buffer[position] != rune('p') {
							goto l4
						}
						position++
						goto l3
					l4:
						position, tokenIndex = position3, tokenIndex3
						if buffer[position] != rune('P') {
							goto l0
						}
						position++
					}
				l3:
					{
						position5, tokenIndex5 := position, tokenIndex
						if buffer[position] != rune('a') {
							goto l6
						}
						position++
						goto l5
					l6:
						position, tokenIndex = position5, tokenIndex5
						if buffer[position] != rune('A') {
							goto l0
						}
						position++
					}
				l5:
					{
						position7, tokenIndex7 := position, tokenIndex
						if buffer[position] != rune('c') {
							goto l8
						}
						position++
						goto l7
					l8:
						position, tokenIndex = position7, tokenIndex7
						if buffer[position] != rune('C') {
							goto l0
						}
						position++
					}
				l7:
					{
						position9, tokenIndex9 := position, tokenIndex
						if buffer[position] != rune('k') {
							goto l10
						}
						position++
						goto l9
					l10:
						position, tokenIndex = position9, tokenIndex9
						if buffer[position] != rune('K') {
							goto l0
						}
						position++
					}
				l9:
					{
						position11, tokenIndex11 := position, tokenIndex
						if buffer[position] != rune('a') {
							goto l12
						}
						position++
						goto l11
					l12:
						position, tokenIndex = position11, tokenIndex11
						if buffer[position] != rune('A') {
							goto l0
						}
						position++
					}
				l11:
					{
						position13, tokenIndex13 := position, tokenIndex
						if buffer[position] != rune('g') {
							goto l14
						}
						position++
						goto l13
					l14:
						position, tokenIndex = position13, tokenIndex13
						if buffer[position] != rune('G') {
							goto l0
						}
						position++
					}
				l13:
					{
						position15, tokenIndex15 := position, tokenIndex
						if buffer[position] != rune('e') {
							goto l16
						}
						position++
						goto l15
					l16:
						position, tokenIndex = position15, tokenIndex15
						if buffer[position] != rune('E') {
							goto l0
						}
						position++
					}
				l15:
					if !_rules[ruleWhitespace]() {
						goto l0
					}
					if !_rules[ruleLowerLabel]() {
						goto l0
					}
					add(rulePackage, position2)
				}
				if !_rules[ruleNewline]() {
					goto l0
				}
				{
					position17, tokenIndex17 := position, tokenIndex
					{
						position19 := position
						{
							position20, tokenIndex20 := position, tokenIndex
							if buffer[position] != rune('i') {
								goto l21
							}
							position++
							goto l20
						l21:
							position, tokenIndex = position20, tokenIndex20
							if buffer[position] != rune('I') {
								goto l17
							}
							position++
						}
					l20:
						{
							position22, tokenIndex22 := position, tokenIndex
							if buffer[position] != rune('m') {
								goto l23
							}
							position++
							goto l22
						l23:
							position, tokenIndex = position22, tokenIndex22
							if buffer[position] != rune('M') {
								goto l17
							}
							position++
						}
					l22:
						{
							position24, tokenIndex24 := position, tokenIndex
							if buffer[position] != rune('p') {
								goto l25
							}
							position++
							goto l24
						l25:
							position, tokenIndex = position24, tokenIndex24
							if buffer[position] != rune('P') {
								goto l17
							}
							position++
						}
					l24:
						{
							position26, tokenIndex26 := position, tokenIndex
							if buffer[position] != rune('o') {
								goto l27
							}
							position++
							goto l26
						l27:
							position, tokenIndex = position26, tokenIndex26
							if buffer[position] != rune('O') {
								goto l17
							}
							position++
						}
					l26:
						{
							position28, tokenIndex28 := position, tokenIndex
							if buffer[position] != rune('r') {
								goto l29
							}
							position++
							goto l28
						l29:
							position, tokenIndex = position28, tokenIndex28
							if buffer[position] != rune('R') {
								goto l17
							}
							position++
						}
					l28:
						{
							position30, tokenIndex30 := position, tokenIndex
							if buffer[position] != rune('t') {
								goto l31
							}
							position++
							goto l30
						l31:
							position, tokenIndex = position30, tokenIndex30
							if buffer[position] != rune('T') {
								goto l17
							}
							position++
						}
					l30:
						if buffer[position] != rune(':') {
							goto l17
						}
						position++
						if !_rules[ruleNewline]() {
							goto l17
						}
						if !_rules[ruleIndent]() {
							goto l17
						}
						{
							position32, tokenIndex32 := position, tokenIndex
							{
								position34 := position
								{
									position35, tokenIndex35 := position, tokenIndex
									if buffer[position] != rune('g') {
										goto l36
									}
									position++
									goto l35
								l36:
									position, tokenIndex = position35, tokenIndex35
									if buffer[position] != rune('G') {
										goto l32
									}
									position++
								}
							l35:
								{
									position37, tokenIndex37 := position, tokenIndex
									if buffer[position] != rune('o') {
										goto l38
									}
									position++
									goto l37
								l38:
									position, tokenIndex = position37, tokenIndex37
									if buffer[position] != rune('O') {
										goto l32
									}
									position++
								}
							l37:
								if buffer[position] != rune(':') {
									goto l32
								}
								position++
								if !_rules[ruleNewline]() {
									goto l32
								}
								if !_rules[ruleIndent]() {
									goto l32
								}
								if !_rules[ruleString]() {
									goto l32
								}
								if !_rules[ruleNewline]() {
									goto l32
								}
							l39:
								{
									position40, tokenIndex40 := position, tokenIndex
									if !_rules[ruleString]() {
										goto l40
									}
									if !_rules[ruleNewline]() {
										goto l40
									}
									goto l39
								l40:
									position, tokenIndex = position40, tokenIndex40
								}
								if !_rules[ruleDedent]() {
									goto l32
								}
								add(ruleGoImport, position34)
							}
							goto l33
						l32:
							position, tokenIndex = position32, tokenIndex32
						}
					l33:
						{
							position41, tokenIndex41 := position, tokenIndex
							{
								position43 := position
								{
									position44, tokenIndex44 := position, tokenIndex
									if buffer[position] != rune('m') {
										goto l45
									}
									position++
									goto l44
								l45:
									position, tokenIndex = position44, tokenIndex44
									if buffer[position] != rune('M') {
										goto l41
									}
									position++
								}
							l44:
								{
									position46, tokenIndex46 := position, tokenIndex
									if buffer[position] != rune('e') {
										goto l47
									}
									position++
									goto l46
								l47:
									position, tokenIndex = position46, tokenIndex46
									if buffer[position] != rune('E') {
										goto l41
									}
									position++
								}
							l46:
								{
									position48, tokenIndex48 := position, tokenIndex
									if buffer[position] != rune('l') {
										goto l49
									}
									position++
									goto l48
								l49:
									position, tokenIndex = position48, tokenIndex48
									if buffer[position] != rune('L') {
										goto l41
									}
									position++
								}
							l48:
								{
									position50, tokenIndex50 := position, tokenIndex
									if buffer[position] != rune('t') {
										goto l51
									}
									position++
									goto l50
								l51:
									position, tokenIndex = position50, tokenIndex50
									if buffer[position] != rune('T') {
										goto l41
									}
									position++
								}
							l50:
								if buffer[position] != rune(':') {
									goto l41
								}
								position++
								if !_rules[ruleNewline]() {
									goto l41
								}
								if !_rules[ruleIndent]() {
									goto l41
								}
								if !_rules[ruleString]() {
									goto l41
								}
								if !_rules[ruleNewline]() {
									goto l41
								}
							l52:
								{
									position53, tokenIndex53 := position, tokenIndex
									if !_rules[ruleString]() {
										goto l53
									}
									if !_rules[ruleNewline]() {
										goto l53
									}
									goto l52
								l53:
									position, tokenIndex = position53, tokenIndex53
								}
								if !_rules[ruleDedent]() {
									goto l41
								}
								add(ruleMeltImport, position43)
							}
							goto l42
						l41:
							position, tokenIndex = position41, tokenIndex41
						}
					l42:
						add(ruleImport, position19)
					}
					goto l18
				l17:
					position, tokenIndex = position17, tokenIndex17
				}
			l18:
				{
					position54, tokenIndex54 := position, tokenIndex
					if !_rules[ruleNewline]() {
						goto l54
					}
					goto l55
				l54:
					position, tokenIndex = position54, tokenIndex54
				}
			l55:
			l56:
				{
					position57, tokenIndex57 := position, tokenIndex
					{
						position58 := position
						{
							switch buffer[position] {
							case 'R', 'r':
								{
									position60 := position
									{
										position61, tokenIndex61 := position, tokenIndex
										if buffer[position] != rune('r') {
											goto l62
										}
										position++
										goto l61
									l62:
										position, tokenIndex = position61, tokenIndex61
										if buffer[position] != rune('R') {
											goto l57
										}
										position++
									}
								l61:
									{
										position63, tokenIndex63 := position, tokenIndex
										if buffer[position] != rune('e') {
											goto l64
										}
										position++
										goto l63
									l64:
										position, tokenIndex = position63, tokenIndex63
										if buffer[position] != rune('E') {
											goto l57
										}
										position++
									}
								l63:
									{
										position65, tokenIndex65 := position, tokenIndex
										if buffer[position] != rune('c') {
											goto l66
										}
										position++
										goto l65
									l66:
										position, tokenIndex = position65, tokenIndex65
										if buffer[position] != rune('C') {
											goto l57
										}
										position++
									}
								l65:
									{
										position67, tokenIndex67 := position, tokenIndex
										if buffer[position] != rune('o') {
											goto l68
										}
										position++
										goto l67
									l68:
										position, tokenIndex = position67, tokenIndex67
										if buffer[position] != rune('O') {
											goto l57
										}
										position++
									}
								l67:
									{
										position69, tokenIndex69 := position, tokenIndex
										if buffer[position] != rune('r') {
											goto l70
										}
										position++
										goto l69
									l70:
										position, tokenIndex = position69, tokenIndex69
										if buffer[position] != rune('R') {
											goto l57
										}
										position++
									}
								l69:
									{
										position71, tokenIndex71 := position, tokenIndex
										if buffer[position] != rune('d') {
											goto l72
										}
										position++
										goto l71
									l72:
										position, tokenIndex = position71, tokenIndex71
										if buffer[position] != rune('D') {
											goto l57
										}
										position++
									}
								l71:
									if !_rules[ruleWhitespace]() {
										goto l57
									}
									if !_rules[ruleCapitalLabel]() {
										goto l57
									}
									{
										position73, tokenIndex73 := position, tokenIndex
										if !_rules[ruleGenericArgs]() {
											goto l73
										}
										goto l74
									l73:
										position, tokenIndex = position73, tokenIndex73
									}
								l74:
									{
										position75, tokenIndex75 := position, tokenIndex
										{
											position77 := position
											if buffer[position] != rune(':') {
												goto l75
											}
											position++
											if !_rules[ruleNewline]() {
												goto l75
											}
											if !_rules[ruleIndent]() {
												goto l75
											}
											{
												position80 := position
												if !_rules[ruleLabel]() {
													goto l75
												}
												if !_rules[ruleWhitespace]() {
													goto l75
												}
												if !_rules[ruleType]() {
													goto l75
												}
												add(ruleSex, position80)
											}
											if !_rules[ruleNewline]() {
												goto l75
											}
										l78:
											{
												position79, tokenIndex79 := position, tokenIndex
												{
													position81 := position
													if !_rules[ruleLabel]() {
														goto l79
													}
													if !_rules[ruleWhitespace]() {
														goto l79
													}
													if !_rules[ruleType]() {
														goto l79
													}
													add(ruleSex, position81)
												}
												if !_rules[ruleNewline]() {
													goto l79
												}
												goto l78
											l79:
												position, tokenIndex = position79, tokenIndex79
											}
											if !_rules[ruleDedent]() {
												goto l75
											}
											add(ruleRecordContents, position77)
										}
										goto l76
									l75:
										position, tokenIndex = position75, tokenIndex75
									}
								l76:
									add(ruleRecord, position60)
								}
								break
							case 'I', 'i':
								{
									position82 := position
									{
										position83, tokenIndex83 := position, tokenIndex
										if buffer[position] != rune('i') {
											goto l84
										}
										position++
										goto l83
									l84:
										position, tokenIndex = position83, tokenIndex83
										if buffer[position] != rune('I') {
											goto l57
										}
										position++
									}
								l83:
									{
										position85, tokenIndex85 := position, tokenIndex
										if buffer[position] != rune('n') {
											goto l86
										}
										position++
										goto l85
									l86:
										position, tokenIndex = position85, tokenIndex85
										if buffer[position] != rune('N') {
											goto l57
										}
										position++
									}
								l85:
									{
										position87, tokenIndex87 := position, tokenIndex
										if buffer[position] != rune('t') {
											goto l88
										}
										position++
										goto l87
									l88:
										position, tokenIndex = position87, tokenIndex87
										if buffer[position] != rune('T') {
											goto l57
										}
										position++
									}
								l87:
									{
										position89, tokenIndex89 := position, tokenIndex
										if buffer[position] != rune('e') {
											goto l90
										}
										position++
										goto l89
									l90:
										position, tokenIndex = position89, tokenIndex89
										if buffer[position] != rune('E') {
											goto l57
										}
										position++
									}
								l89:
									{
										position91, tokenIndex91 := position, tokenIndex
										if buffer[position] != rune('r') {
											goto l92
										}
										position++
										goto l91
									l92:
										position, tokenIndex = position91, tokenIndex91
										if buffer[position] != rune('R') {
											goto l57
										}
										position++
									}
								l91:
									{
										position93, tokenIndex93 := position, tokenIndex
										if buffer[position] != rune('f') {
											goto l94
										}
										position++
										goto l93
									l94:
										position, tokenIndex = position93, tokenIndex93
										if buffer[position] != rune('F') {
											goto l57
										}
										position++
									}
								l93:
									{
										position95, tokenIndex95 := position, tokenIndex
										if buffer[position] != rune('a') {
											goto l96
										}
										position++
										goto l95
									l96:
										position, tokenIndex = position95, tokenIndex95
										if buffer[position] != rune('A') {
											goto l57
										}
										position++
									}
								l95:
									{
										position97, tokenIndex97 := position, tokenIndex
										if buffer[position] != rune('c') {
											goto l98
										}
										position++
										goto l97
									l98:
										position, tokenIndex = position97, tokenIndex97
										if buffer[position] != rune('C') {
											goto l57
										}
										position++
									}
								l97:
									{
										position99, tokenIndex99 := position, tokenIndex
										if buffer[position] != rune('e') {
											goto l100
										}
										position++
										goto l99
									l100:
										position, tokenIndex = position99, tokenIndex99
										if buffer[position] != rune('E') {
											goto l57
										}
										position++
									}
								l99:
									if !_rules[ruleWhitespace]() {
										goto l57
									}
									if !_rules[ruleCapitalLabel]() {
										goto l57
									}
									{
										position101, tokenIndex101 := position, tokenIndex
										if !_rules[ruleGenericArgs]() {
											goto l101
										}
										goto l102
									l101:
										position, tokenIndex = position101, tokenIndex101
									}
								l102:
									{
										position103, tokenIndex103 := position, tokenIndex
										{
											position105 := position
											if buffer[position] != rune(':') {
												goto l103
											}
											position++
											if !_rules[ruleNewline]() {
												goto l103
											}
											if !_rules[ruleIndent]() {
												goto l103
											}
											{
												position108 := position
												if !_rules[ruleFunLabel]() {
													goto l103
												}
												if buffer[position] != rune('(') {
													goto l103
												}
												position++
											l109:
												{
													position110, tokenIndex110 := position, tokenIndex
													if !_rules[ruleType]() {
														goto l110
													}
													if buffer[position] != rune(',') {
														goto l110
													}
													position++
													{
														position111, tokenIndex111 := position, tokenIndex
														if !_rules[ruleWhitespace]() {
															goto l111
														}
														goto l112
													l111:
														position, tokenIndex = position111, tokenIndex111
													}
												l112:
													goto l109
												l110:
													position, tokenIndex = position110, tokenIndex110
												}
												{
													position113, tokenIndex113 := position, tokenIndex
													if !_rules[ruleType]() {
														goto l113
													}
													goto l114
												l113:
													position, tokenIndex = position113, tokenIndex113
												}
											l114:
												if buffer[position] != rune(')') {
													goto l103
												}
												position++
												{
													position115, tokenIndex115 := position, tokenIndex
													{
														position117 := position
														if !_rules[ruleWhitespace]() {
															goto l115
														}
														if !_rules[ruleType]() {
															goto l115
														}
														add(ruleZ, position117)
													}
													goto l116
												l115:
													position, tokenIndex = position115, tokenIndex115
												}
											l116:
												add(ruleDeclaration, position108)
											}
											if !_rules[ruleNewline]() {
												goto l103
											}
										l106:
											{
												position107, tokenIndex107 := position, tokenIndex
												{
													position118 := position
													if !_rules[ruleFunLabel]() {
														goto l107
													}
													if buffer[position] != rune('(') {
														goto l107
													}
													position++
												l119:
													{
														position120, tokenIndex120 := position, tokenIndex
														if !_rules[ruleType]() {
															goto l120
														}
														if buffer[position] != rune(',') {
															goto l120
														}
														position++
														{
															position121, tokenIndex121 := position, tokenIndex
															if !_rules[ruleWhitespace]() {
																goto l121
															}
															goto l122
														l121:
															position, tokenIndex = position121, tokenIndex121
														}
													l122:
														goto l119
													l120:
														position, tokenIndex = position120, tokenIndex120
													}
													{
														position123, tokenIndex123 := position, tokenIndex
														if !_rules[ruleType]() {
															goto l123
														}
														goto l124
													l123:
														position, tokenIndex = position123, tokenIndex123
													}
												l124:
													if buffer[position] != rune(')') {
														goto l107
													}
													position++
													{
														position125, tokenIndex125 := position, tokenIndex
														{
															position127 := position
															if !_rules[ruleWhitespace]() {
																goto l125
															}
															if !_rules[ruleType]() {
																goto l125
															}
															add(ruleZ, position127)
														}
														goto l126
													l125:
														position, tokenIndex = position125, tokenIndex125
													}
												l126:
													add(ruleDeclaration, position118)
												}
												if !_rules[ruleNewline]() {
													goto l107
												}
												goto l106
											l107:
												position, tokenIndex = position107, tokenIndex107
											}
											if !_rules[ruleDedent]() {
												goto l103
											}
											add(ruleArray, position105)
										}
										goto l104
									l103:
										position, tokenIndex = position103, tokenIndex103
									}
								l104:
									add(ruleInterface, position82)
								}
								break
							default:
								{
									position128 := position
									{
										position129, tokenIndex129 := position, tokenIndex
										if buffer[position] != rune('f') {
											goto l130
										}
										position++
										goto l129
									l130:
										position, tokenIndex = position129, tokenIndex129
										if buffer[position] != rune('F') {
											goto l57
										}
										position++
									}
								l129:
									{
										position131, tokenIndex131 := position, tokenIndex
										if buffer[position] != rune('u') {
											goto l132
										}
										position++
										goto l131
									l132:
										position, tokenIndex = position131, tokenIndex131
										if buffer[position] != rune('U') {
											goto l57
										}
										position++
									}
								l131:
									{
										position133, tokenIndex133 := position, tokenIndex
										if buffer[position] != rune('n') {
											goto l134
										}
										position++
										goto l133
									l134:
										position, tokenIndex = position133, tokenIndex133
										if buffer[position] != rune('N') {
											goto l57
										}
										position++
									}
								l133:
									{
										position135, tokenIndex135 := position, tokenIndex
										if buffer[position] != rune('c') {
											goto l136
										}
										position++
										goto l135
									l136:
										position, tokenIndex = position135, tokenIndex135
										if buffer[position] != rune('C') {
											goto l57
										}
										position++
									}
								l135:
									if !_rules[ruleWhitespace]() {
										goto l57
									}
									if !_rules[ruleFunLabel]() {
										goto l57
									}
									{
										position137, tokenIndex137 := position, tokenIndex
										if !_rules[ruleGenericArgs]() {
											goto l137
										}
										goto l138
									l137:
